# AI-Watch-Buddy

./: .env.sample  .gitignore  CLAUDE.md  LOGGING.md  README.md  STATIC_DEPLOYMENT.md  URL_CONFIGURATION_CHANGES.md  action_list_result.json  build-frontend.py  dockerfile  main.py  pyproject.toml  repomix-output.xml  schema.json  test_analyzer.py  test_video_analyzer_basic.py  test_video_analyzer_functionality.py  video_analyzer.py
.github/instructions/: adx.instructions.md
docs/: MOCK_IMPLEMENTATION.md  api.md  tts_base64_usage.md
frontend/: .env.sample  .eslintrc.json  components.json  next.config.js  package-lock.json  package.json  repomix-output.xml  tailwind.config.js  tsconfig.json
frontend/WebSDK/src/: main.ts
frontend/scripts/: copy-static.js
frontend/src/: index.css
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/: chat-room.tsx  chrome-browser.tsx  duration.tsx  live2d.tsx  settings-modal.tsx  video-config-modal.tsx  video-player-with-controls.tsx  websocket-handler.tsx
frontend/src/context/: chat-context.tsx  chat-history-context.tsx  live2d-config-context.tsx  microphone-context.tsx  settings-context.tsx  websocket-context.tsx
src/ai_watch_buddy/: action_generate.py  actions.py  ai_actions.py  config.py  connection_manager.py  fetch_video.py  important.py  logging_config.py  pipeline.py  server.py  session.py  test_minimax_tts.py  test_tts_integration.py  tts.py  tts_generator.py
src/video_reaction/: ai_actions.py
static/: index.html  index.txt
temp/: test_node.js
temp/elaina/: LSS.model3.json
(+35 files in other folders)
